<resources>
    <string name="app_name">DIY 760</string>
    <string name="logo_description">Logo</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="firstname">First Name</string>
    <string name="register">Not registered yet? Register here</string>
    <string name="guest_login">Use app as a Guest</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="login_redirect">Already have an account? Login</string>
    <string name="submit">Submit</string>
    <string name="error_confirm_email_mismatch">Email addresses do not match</string>
    <string name="error_password_length">Password must be at least 8 characters long</string>
    <string name="error_password_digits">Password must contain at least one digit</string>
    <string name="error_password_symbols">Password must contain at least one symbol</string>
    <string name="error_confirm_password_mismatch">Passwords do not match</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="build_your_dispute_letter">Build Your Dispute Letter!</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="apt">Apt</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="last_4_of_social">Last 4 of Social</string>
    <string name="select_birthdate">Select Birthdate</string>
    <string name="select_date">Select Date</string>
    <string name="please_select_the_items_you_would_nlike_to_include_in_your_letter">Please select the items you would \nlike to include in your letter:</string>
    <string name="dispute_inaccurate_or_incorrect_names">Dispute inaccurate or incorrect names?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="inaccurate_name">Inaccurate Name</string>
    <string name="dispute_inaccurate_or_incorrect_addresses">Dispute inaccurate or incorrect addresses?</string>
    <string name="plus_button">+</string>
    <string name="dispute_inaccurate_or_incorrect_accounts">Dispute inaccurate or incorrect accounts?</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="dispute_inaccurate_or_incorrect_public_records">Dispute inaccurate or incorrect public records?</string>
    <string name="dispute_inaccurate_or_incorrect_inquiries">Dispute inaccurate or incorrect inquiries?</string>
    <string name="inquiry_name">Inquiry Name</string>
    <string name="record_name">Record Name</string>
    <string name="freeze_your_credit_report">Freeze your credit report?</string>
    <string name="stop_offers_in_the_mail">Stop offers in the mail?</string>
    <string name="are_you_including_additional_documents">Are you including additional documents?</string>
    <string name="generate_letter">Generate Letter</string>
    <string name="enter_name_of_document">Enter name of document</string>
    <string name="print_button">Print</string>
    <string name="save_button">Save</string>
    <string name="clear_button">Clear</string>
    <string name="first_text_field">First Text Field</string>
    <string name="second_text_field">Second Text Field</string>
    <string name="button">button</string>

    <string-array name="section2_options">
        <item>Click to Select a Credit Bureau</item>
        <item>Equifax
            \nP.O. Box 740256
            \nAtlanta, GA 30374-0256\n
            \nDear Equifax\n</item>
        <item>Experian
            \nP.O. Box 4500
            \nAllen TX 75013\n
            \nDear Experian\n</item>
        <item>TransUnion Consumer Solutions
            \nP.O. Box 2000
            \nChester, PA 19016-2000\n
            \nDear TransUnion\n</item>
    </string-array>

    <string-array name="name_dispute_options">
        <item>Click to Select Your Reason for Disputing</item>
        <item>Misspelled Name</item>
        <item>Not My Name</item>
    </string-array>

    <string-array name="address_dispute_options">
        <item>Click to Select Your Reason for Disputing</item>
        <item>Incorrect Address</item>
        <item>Not My Address</item>
    </string-array>

    <string-array name="accounts_dispute_options">
        <item>Click to Select Your Reason for Disputing</item>
        <item>Wrong Creditor</item>
        <item>Wrong Balance</item>
        <item>Wrong Credit Limit</item>
        <item>Wrong Monthly Payment</item>
        <item>Wrong Payment History</item>
        <item>Wrong Last Payment</item>
        <item>Incorrect Payment Status</item>
        <item>Incorrect Past Due Amount Amount</item>
        <item>Incorrect Account Status</item>
        <item>Wrong Number of Days Late</item>
        <item>Incorrect Closed Date</item>
        <item>Passed Statute of Limitations</item>
        <item>Not My Account</item>
    </string-array>

    <string-array name="inquiries_dispute_options">
        <item>Click to Select Your Reason for Disputing</item>
        <item>Wrong Inquiry Date</item>
        <item>Passed Statute of Limitations</item>
        <item>Unauthorized Inquiry</item>
        <item>Not My Inquiry</item>
    </string-array>

    <string-array name="records_dispute_options">
        <item>Click to Select Your Reason for Disputing</item>
        <item>Wrong Filing Date</item>
        <item>Wrong Ending Date</item>
        <item>Wrong Court Number</item>
        <item>Wrong Record Status</item>
        <item>Wrong Date Paid</item>
        <item>Wrong Record Amount</item>
        <item>Wrong Plaintiff</item>
        <item>Passed Statute of Limitations</item>
        <item>Not My Record</item>
    </string-array>
</resources>